add new table + reserver and reduse reserve
